# lmux

./: .gitignore  BUILD.md  Brewfile  Cargo.toml  README.md  mise.toml
.githooks/: pre-commit
.github/workflows/: linux.yml  macos-port.yml
crates/lmux/: Cargo.toml
crates/lmux-anchor/: Cargo.toml
crates/lmux-anchor/src/: autodetect.rs  lib.rs  registry.rs
crates/lmux-bus/: Cargo.toml
crates/lmux-bus/src/: client.rs  codec.rs  envelope.rs  error.rs  kinds.rs  lib.rs  paths.rs  server.rs
crates/lmux-bus/tests/: roundtrip.rs
crates/lmux-cli/: Cargo.toml
crates/lmux-cli/src/: main.rs
crates/lmux-compositor/: Cargo.toml
crates/lmux-compositor/src/: kwin.rs  lib.rs  macos.rs  noop.rs  spawn.rs  x11.rs
crates/lmux-compositor/tests/: spawn_env.rs
crates/lmux-config/: Cargo.toml
crates/lmux-config/src/: lib.rs  watch.rs
crates/lmux-control/: Cargo.toml
crates/lmux-control/src/: lib.rs
crates/lmux-control/tests/: e2e.rs
crates/lmux-e2e/: Cargo.toml
crates/lmux-e2e/src/: lib.rs
crates/lmux-e2e/tests/: agent_cli.rs  anchor_satellite_flow.rs  satellite_open.rs  session_list.rs
crates/lmux-layout/: Cargo.toml
crates/lmux-layout/src/: lib.rs
crates/lmux-libghostty/: Cargo.toml  build.rs
crates/lmux-libghostty/src/: lib.rs
crates/lmux-libghostty/tests/: colors.rs
crates/lmux-libghostty/vendor-ghostty/: build.zig  build.zig.zon
crates/lmux-macos-helper/: Cargo.toml
crates/lmux-macos-helper/src/: lib.rs  main.rs
crates/lmux-mcp/: Cargo.toml
crates/lmux-mcp/src/: lib.rs  main.rs
crates/lmux-notify/: Cargo.toml
crates/lmux-notify/src/: lib.rs
crates/lmux-pty/: Cargo.toml
crates/lmux-pty/src/: lib.rs
crates/lmux-pty/tests/: lifecycle.rs
crates/lmux-satellite/: Cargo.toml
crates/lmux-satellite/src/: lib.rs
crates/lmux-session/: Cargo.toml
crates/lmux-session/src/: lib.rs  migration.rs  store.rs
crates/lmux-state/: Cargo.toml
crates/lmux-state/src/: atomic_write.rs  lib.rs
crates/lmux-state/tests/: atomicity.rs
crates/lmux-wayland-host/: Cargo.toml
crates/lmux-wayland-host/src/: host.rs  lib.rs  state.rs
crates/lmux-wayland-host/tests/: bind_socket.rs  input.rs  resize_storm.rs  shm_frame.rs  xdg_toplevel.rs
crates/lmux/src/: agent_control.rs  app.rs  bus.rs  compositor_bridge.rs  keymap.rs  launcher.rs  layout.rs  main.rs  pane.rs  render.rs  satellite.rs  sidebar.rs  state.rs  switcher.rs  tracing_setup.rs
crates/lmux/src/launcher/: linux.rs  macos.rs
crates/lmux/src/sidebar/: grants.rs  labels.rs
crates/lmux/src/state/: support.rs
docs/: agent-cli-skill-draft.md  agent-terminal-control.md  macos-port.md
docs/adr/: 0001-rendering-stack.md  0002-anchor-satellites-bus.md  0003-path-a-spawn-and-track.md  0004-compositor-control-trait.md  0005-kwin-mvp-compositor.md  0006-wlroots-backend-hyprland.md  0007-config-format-toml.md  0008-bus-transport-unix-socket.md  0009-sandbox-primitive-bubblewrap.md  0010-sandbox-defaults.md  0011-kwin-script-lifecycle.md  0012-session-persistence-earn-it.md  0013-distribution-static-binary.md  0014-product-name.md  0015-lmux-bus-architecture.md  0016-smart-open-event-set-v0.2.md  0017-compositor-control-v0.2-surface.md  0018-nested-wayland-compositor-for-satellites.md  0019-rearrange-mode-dnd-on-split-tree.md  0020-clipboard-image-paste-via-tempfile.md  README.md
docs/history/: README.md  brainstorming-2026-04-20.md  e2e-test-strategy.md  prd-v0.2.md  product-brief-distillate.md  product-brief.md  spike-compositor-ipc.md  spike-kwin-lifecycle.md  v0.2-progress.md
openspec/: config.yaml
openspec/changes/agent-terminal-control/: proposal.md  tasks.md
openspec/changes/agent-terminal-control/specs/agent-terminal-control/: spec.md
openspec/changes/anchor-respawn-and-destructive-hide/: design.md  proposal.md  tasks.md
openspec/changes/anchor-respawn-and-destructive-hide/specs/anchors/: spec.md
openspec/changes/archive/2026-06-08-linux-explicit-window-attach/: design.md  tasks.md
openspec/changes/archive/2026-06-08-macos-explicit-window-attach/: design.md
openspec/changes/archive/2026-06-08-macos-managed-launch-ownership/: design.md  proposal.md
openspec/changes/archive/2026-06-08-nonblocking-anchor-switch-and-launcher/: baseline.md  design.md  proposal.md  tasks.md
openspec/changes/archive/agent-terminal-control/: design.md
openspec/changes/kwin-full-docking/: design.md  proposal.md  tasks.md
openspec/changes/kwin-full-docking/specs/satellites/: spec.md
openspec/changes/linux-explicit-window-attach/: proposal.md
openspec/changes/linux-explicit-window-attach/specs/satellites/: spec.md
openspec/changes/linux-explicit-window-attach/specs/sidebar/: spec.md
openspec/changes/macos-explicit-window-attach/: proposal.md  tasks.md
openspec/changes/macos-explicit-window-attach/specs/satellites/: spec.md
openspec/changes/macos-managed-launch-ownership/: tasks.md
openspec/changes/macos-port-window-groups/: design.md  proposal.md  tasks.md
openspec/changes/macos-port-window-groups/specs/compositor-control/: spec.md
openspec/changes/macos-port-window-groups/specs/platform-macos/: spec.md
openspec/changes/macos-port-window-groups/specs/satellites/: spec.md
openspec/changes/multi-display-first-class/: design.md  proposal.md  tasks.md
openspec/changes/plugin-sdk-public-bus/: design.md  proposal.md  tasks.md
openspec/changes/smart-open-passive-intents/: design.md  proposal.md  tasks.md
openspec/changes/static-binary-release/: design.md  proposal.md  tasks.md
openspec/changes/wlroots-backend-hyprland/: design.md  proposal.md  tasks.md
openspec/changes/workspace-profiles-and-restore/: tasks.md
openspec/specs/anchors/: spec.md
openspec/specs/bus-ipc/: spec.md
openspec/specs/compositor-control/: spec.md
openspec/specs/config/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/satellites/: spec.md
openspec/specs/sessions/: spec.md
openspec/specs/sidebar/: spec.md
openspec/specs/terminal-core/: spec.md
scripts/: install-local.sh  macos-deps.sh  macos-doctor.sh  macos-smoke.sh
share/lmux/kwin/: lmux-dock.js
(+21 files in other folders)
