[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
async-channel = "2"
async-trait = "0.1"
bytes = "1.8"
clap = { version = "4.5", features = ["derive"] }
gtk4 = { version = "0.9", features = ["v4_14"] }
libc = "0.2"
notify = "6"
pangocairo = "0.20"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "fs", "io-util", "signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "warn"
