[package]
name = "lmux-anchor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
libc.workspace = true
lmux-config = { path = "../lmux-config" }
lmux-pty = { path = "../lmux-pty" }
nix = { version = "0.29", features = ["signal", "process"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing.workspace = true
uuid.workspace = true
