[package]
name = "lmux-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt", "rt-multi-thread"] }
