[package]
name = "lmux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lmux-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time"] }
lmux-bus = { path = "../lmux-bus" }
lmux-control = { path = "../lmux-control" }
lmux-session = { path = "../lmux-session" }
