[package]
name = "lmux-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
notify.workspace = true
serde.workspace = true
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
