[package]
name = "lmux-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# Library crate is the shared harness; tests live under `tests/`.
[lib]
path = "src/lib.rs"

[dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
lmux-session = { path = "../lmux-session" }
lmux-state = { path = "../lmux-state" }
lmux-bus = { path = "../lmux-bus" }
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time", "sync"] }

[dev-dependencies]
# Tests under tests/ re-use the harness from the library above.
