[package]
name = "lmux-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "lmux-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
uuid.workspace = true
lmux-bus = { path = "../lmux-bus" }
