[package]
name = "lmux-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-channel.workspace = true
futures-util = "0.3"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus.workspace = true
