[package]
name = "lmux-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
libc.workspace = true
portable-pty.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
