[package]
name = "lmux-satellite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lmux-bus = { path = "../lmux-bus" }
lmux-compositor = { path = "../lmux-compositor" }
lmux-layout = { path = "../lmux-layout" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "process", "time"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
