[package]
name = "lmux-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
lmux-layout = { path = "../lmux-layout" }
lmux-state = { path = "../lmux-state" }
serde.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
toml = "0.8"
tracing.workspace = true
