[package]
name = "lmux-wayland-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-channel.workspace = true
libc = "0.2"
smithay = { version = "0.7", default-features = false, features = [
    "wayland_frontend",
    "desktop",
] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
libc = "0.2"
tempfile = "3"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
